force-app/main/default/objects/Education_Details__c/fields/CGPA_Division__c.field-meta.xml
<CustomField>
    <fullName>CGPA_Division__c</fullName>
    <label>CGPA/Division</label>
    <length>255</length>
    <type>Text</type>
</CustomField>