force-app/main/default/objects/Education_Details__c/fields/Department_School_Division__c.field-meta.xml
<CustomField>
    <fullName>Department_School_Division__c</fullName>
    <label>Department / School / Division</label>
    <length>255</length>
    <type>Text</type>
</CustomField>