force-app/main/default/objects/Education_Details__c/fields/Institution__c.field-meta.xml
<CustomField>
    <fullName>Institution__c</fullName>
    <label>Institution</label>
    <length>255</length>
    <type>Text</type>
</CustomField>