force-app/main/default/objects/Education_Details__c/fields/Likely_date_of_completion__c.field-meta.xml
<CustomField>
    <fullName>Likely_date_of_completion__c</fullName>
    <label>Likely date of completion</label>
    <type>Date</type>
</CustomField>