force-app/main/default/objects/Education_Details__c/fields/Pursuing_Higher_Degree__c.field-meta.xml
<CustomField>
    <fullName>Pursuing_Higher_Degree__c</fullName>
    <description>Are you pursuing a higher degree (PhD, MD or equivalent) or academic course?</description>
    <inlineHelpText>Other Degree gives the option to enter Pursuing Degree</inlineHelpText>
    <label>Pursuing Higher Degree?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>false</fullName>
                <isActive>false</isActive>
                <label>false</label>
            </value>
            <value>
                <fullName>true</fullName>
                <isActive>false</isActive>
                <label>true</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>