force-app/main/default/objects/Education_Details__c/fields/Qualification__c.field-meta.xml
<CustomField>
    <fullName>Qualification__c</fullName>
    <label>Qualification</label>
    <length>255</length>
    <type>Text</type>
</CustomField>