force-app/main/default/objects/Education_Details__c/fields/Research_Summary_During_Highest_Degree__c.field-meta.xml
<CustomField>
    <fullName>Research_Summary_During_Highest_Degree__c</fullName>
    <label>Research Summary During Highest Degree</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>