force-app/main/default/objects/Education_Details__c/fields/Specify_Other_Degree__c.field-meta.xml
<CustomField>
    <fullName>Specify_Other_Degree__c</fullName>
    <label>Specify Other Degree</label>
    <length>255</length>
    <type>Text</type>
</CustomField>