force-app/main/default/objects/Education_Details__c/fields/Specify_the_pursuing_degree__c.field-meta.xml
<CustomField>
    <fullName>Specify_the_pursuing_degree__c</fullName>
    <label>Specify the pursuing degree</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PhD</fullName>
            </value>
            <value>
                <fullName>MD</fullName>
            </value>
            <value>
                <fullName>MPH</fullName>
            </value>
            <value>
                <fullName>DM</fullName>
            </value>
            <value>
                <fullName>MBBS</fullName>
            </value>
            <value>
                <fullName>MD-PhD</fullName>
            </value>
            <value>
                <fullName>Other Degree</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>