force-app/main/default/objects/Education_Details__c/fields/Specify_the_University__c.field-meta.xml
<CustomField>
    <fullName>Specify_the_University__c</fullName>
    <label>Specify the University</label>
    <length>255</length>
    <type>Text</type>
</CustomField>