force-app/main/default/objects/Education_Details__c/fields/Title_of_thesis_Dissertation__c.field-meta.xml
<CustomField>
    <fullName>Title_of_thesis_Dissertation__c</fullName>
    <label>Title of thesis/Dissertation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>