force-app/main/default/objects/Education_Details__c/fields/University__c.field-meta.xml
<CustomField>
    <fullName>University__c</fullName>
    <label>University</label>
    <length>255</length>
    <type>Text</type>
</CustomField>